# epub2tts-chatterbox

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py
epub2tts_chatterbox/: epub2tts_chatterbox.py  epub_export.py
